--- a/nyitolap/index.html
+++ b/nyitolap/index.html
@@ -22,7 +22,7 @@
             <h4>Webszerkesztés</h4>
             <ul>
                 <li><a href="../html/nyito.html">HTML</a></li>
-                <li><a href="/css/nyito.html">CSS</a></li>
+                <li><a href="../css/nyito.html">CSS</a></li>
                 <li>Bootstrap</li>
             </ul>
             <h4>Programozás</h4>
