--- a/css/szelektorok.html
+++ b/css/szelektorok.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <base target="_blank" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
         <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
@@ -13,6 +17,9 @@
         <title>CSS szelektorok</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1><a href="./index.html" target="_self">CSS - Szelektorok</a></h1>
             <ol>
@@ -75,7 +82,7 @@
                     <ul>
                         <li>
                             Ekkor egyetlen, egyedi
-                            <span class="kiemel">id="sarga"</span> attribútummal
+                            <span class="kod">id="sarga"</span> attribútummal
                             kijelölt elemnek adunk stílust.
                         </li>
                         <li>
@@ -96,9 +103,7 @@
                         </li>
                         <li>
                             Kis- és nagybetű érzékeny!
-                            <span class="kiemel"
-                                >id="sarga" &ne; id="Sarga"</span
-                            >
+                            <span class="kod">id="sarga" &ne; id="Sarga"</span>
                         </li>
                     </ul>
                 </li>
@@ -108,7 +113,7 @@
                     <ul>
                         <li>
                             Ekkor EGY vagy TÖBB, egyedi
-                            <span class="kiemel">class="kozepre"</span>
+                            <span class="kod">class="kozepre"</span>
                             attribútummal kijelölt elemnek adunk stílust.
                         </li>
                         <li>
@@ -124,7 +129,7 @@
                         </li>
                         <li>
                             Kis- és nagybetű érzékeny!
-                            <span class="kiemel"
+                            <span class="kod"
                                 >class="kozepre" &ne; class="Kozepre"</span
                             >
                         </li>
@@ -150,7 +155,7 @@
                     >: több HTML elemre is rárakhatjuk ugyanazt a stílust, ekkor
                     az elemeket vesszővel elválasztva soroljuk fel a
                     szelektorban.
-                    <span class="kiemel">p, h1 { color: red; }</span>
+                    <span class="kod">p, h1 { color: red; }</span>
                 </li>
                 <img src="./images/kep_06.png" />
                 <img src="./images/kep_07.png" />
