--- a/html/alap_html_elemek_2.html
+++ b/html/alap_html_elemek_2.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
         <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
@@ -12,6 +16,9 @@
         <title>HTML alap HTML elemek 2.</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1><a href="./index.html">HTML - Alap HTML elemek 2.</a></h1>
             <ol>
