--- a/html/bevezetes.html
+++ b/html/bevezetes.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <base target="_blank" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
         <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
@@ -13,6 +17,9 @@
         <title>HTML bevezetés</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1><a href="./index.html" target="_self">HTML - Bevezetés</a></h1>
             <ol>
@@ -102,8 +109,8 @@
                         >üres elem (empty element, void element)</span
                     >: ebben az esetben csak nyitó címke van (itt zárom le az
                     elemet, de nem kötelező:
-                    <span class="kod">&lt;tagname /&gt;</span>). Nincs tartalom
-                    és záró címke! Pillanatnyilag ezek az üres elemek.
+                    <span class="kiemel">&lt;tagname /&gt;</span>). Nincs
+                    tartalom és záró címke! Pillanatnyilag ezek az üres elemek.
                 </li>
                 <img src="./images/kep_04.png" />
                 <h4>Elemek megjelenítési érétke:</h4>
