--- a/html/head_elem.html
+++ b/html/head_elem.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <base target="_blank" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
         <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
@@ -13,6 +17,9 @@
         <title>HTML &lt;head&gt; elem</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1>
                 <a href="./index.html" target="_self"
