--- a/html/index.html
+++ b/html/index.html
@@ -3,20 +3,30 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
             href="../images/logo.png"
             type="image/x-icon"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
+        <link rel="stylesheet" href="../stilus/stilus.css" />
         <style>
             ul {
                 list-style-type: decimal;
+            }
+            li {
+                margin-bottom: 1em;
             }
         </style>
         <title>HTML</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1><a href="../nyitolap/index.html">HTML</a></h1>
             <ul>
@@ -35,6 +45,7 @@
                     <a href="./alap_html_elemek_2.html">Alap HTML elemek 2.</a>
                 </li>
                 <li><a href="./linkek.html">Linkek</a></li>
+                <li><a href="./kepek.html">Képek</a></li>
             </ul>
         </div>
     </body>
