--- a/html/linkek.html
+++ b/html/linkek.html
@@ -4,21 +4,126 @@
         <meta charset="UTF-8" />
         <base target="_blank" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
             href="../images/logo.png"
             type="image/x-icon"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
+        <link rel="stylesheet" href="../stilus/stilus.css" />
         <title>HTML linkek</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1>
                 <a href="./index.html" target="_self">HTML - Linkek</a>
             </h1>
             <ol>
-                <h4>Alapvető dolgok:</h4>
+                <h4>Hivatkozások - linkek:</h4>
+                <li>
+                    Hivatkozások, linkek (<span class="kiemel">link</span>)
+                    minden weboldalon találhatóak. Ezek segítségével
+                    navigálhatunk a különböző oldalak között. Egyfajta
+                    horgonyok, amelyek "beleakaszkodnak" a másik oldalba. Ezért
+                    a jelölése az <span class="kiemel">anchor</span> szó
+                    rövidítése.
+                </li>
+                <li>
+                    Jelölés.
+                    <p>
+                        <span class="kod"
+                            >&lt;a href="resource path" target="_blank"&gt;Link
+                            címe&lt;/a&gt;</span
+                        >
+                    </p>
+                    ahol <span class="kiemel">href</span> a
+                    <span class="kiemel">hypertext reference</span> rövidítése.
+                </li>
+                <li>
+                    A hivatkozás címének beállításához:
+                    <a href="./file_eleresi_utvonal.html" class="link"
+                        >resource path</a
+                    >.
+                </li>
+                <li>
+                    Az <span class="kiemel">a</span> elem
+                    <a href="./bevezetes.html#inline" class="link"
+                        >beágyazott elem</a
+                    >.
+                </li>
+                <li>
+                    A <span class="kiemel">link</span> cimkék közötti része nem
+                    csak szöveg, hanem szinte az összes HTML elem lehet.
+                </li>
+                <li>
+                    A link színei alapértelmezetten.
+                    <ul>
+                        <li>látogatatlan: aláhúzott és kék</li>
+                        <li>látogatott: aláhúzott és lila</li>
+                        <li>aktív: aláhúzott és piros</li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="kiemel">target</span>: attribútum, hol nyiljon
+                    meg az új oldal.
+                    <ul>
+                        <li>
+                            <span class="kod">target="_blank"</span>: egy új
+                            oldalon nyitja meg.
+                        </li>
+                        <li>
+                            <span class="kod">target="_self"</span>: ha a link
+                            be van ágyazva egy
+                            <span class="kiemel">iframe</span>-be, akkor abban
+                            nyitja meg.
+                        </li>
+                        <li>
+                            <span class="kod">target="_parent"</span>: ha a link
+                            be van ágyazva több egymásba ágyazott
+                            <span class="kiemel">iframe</span>-be, akkor a
+                            "szülő" <span class="kiemel">iframe</span>-ben
+                            nyitja meg.
+                        </li>
+                        <li>
+                            <span class="kod">target="_top"</span>: ha a link be
+                            van ágyazva több egymásba ágyazott
+                            <span class="kiemel">iframe</span>-be, akkor is a
+                            nyitó lapon nyitja meg.
+                        </li>
+                    </ul>
+                </li>
+                <li>Nézzük a következő példát.</li>
+                <img src="./images/kep_61.png" />
+                <img src="./images/kep_62.png" />
+                <li>Kattintás után.</li>
+                <img src="./images/kep_63.png" />
+                <li>Változtassuk meg a harmadik.html-t.</li>
+                <img src="./images/kep_64.png" />
+                <img src="./images/kep_65.png" />
+                <li>Végül.</li>
+                <img src="./images/kep_66.png" />
+                <img src="./images/kep_67.png" />
+                <li>Kép, mint link.</li>
+                <img src="./images/kep_68.png" />
+                <li>
+                    A linknek meg lehet adni egy
+                    <span class="kiemel">mailto:email-cim</span>
+                    sémát (<span class="kiemel">scheme</span>) a
+                    <span class="kiemel">href</span> attribútumon belül, amely
+                    megnyitja a felhasználó levelező alkalmazását.
+                    <p>
+                        <span class="kod"
+                            >&lt;a href
+                            ="mailto:valaki@gmail.com"&gt;valaki@gmail.com&lt;/a&gt;</span
+                        >
+                    </p>
+                </li>
                 <li>
                     <span class="kiemel">Könyvjelző (bookmark)</span>: hosszú
                     weboldal esetén szükséges lehet a gyors pozícióváltás az
@@ -26,7 +131,7 @@
                     <ul>
                         <li>
                             Hozzunk létre egy könyvjelzőt:
-                            <span class="kiemel"
+                            <span class="kod"
                                 >&lt;p
                                 id="bookmark"&gt;Könyvjelző&lt;/p&gt;</span
                             >
@@ -34,13 +139,13 @@
                         <li>
                             Állítsunk be egy saját oldalon lévő ide mutató
                             linket:
-                            <span class="kiemel"
+                            <span class="kod"
                                 >&lt;a href="#bookmark"&gt;Link&lt;/a&gt;</span
                             >
                         </li>
                         <li>
                             Vagy egy másik oldalon lévő ide mutató linket:
-                            <span class="kiemel"
+                            <span class="kod"
                                 >&lt;a
                                 href="masik.html#bookmark"&gt;Link&lt;/a&gt;</span
                             >
