--- a/nyitolap/index.html
+++ b/nyitolap/index.html
@@ -13,6 +13,12 @@
             ul {
                 list-style-type: decimal;
             }
+            a {
+                color: red;
+            }
+            li {
+                margin-bottom: 1em;
+            }
         </style>
         <title>Nyitólap</title>
     </head>
