--- a/html/index.html
+++ b/html/index.html
@@ -44,8 +44,10 @@
                 <li>
                     <a href="./alap_html_elemek_2.html">Alap HTML elemek 2.</a>
                 </li>
-                <li><a href="./linkek.html">Linkek</a></li>
+                <li><a href="./hivatkozasok.html">Hivatkozások</a></li>
                 <li><a href="./kepek.html">Képek</a></li>
+                <li><a href="./tablak.html">Táblák</a></li>
+                <li><a href="./listak.html">Listák</a></li>
             </ul>
         </div>
     </body>
