--- a/nyitolap/index.html
+++ b/nyitolap/index.html
@@ -33,8 +33,9 @@
             </ul>
             <h4>Programozás</h4>
             <ul>
+                <li>Programozás és Fejlesztői környezetek</li>
+                <li><a href="../python/nyito.html">Python</a></li>
                 <li>C#</li>
-                <li>Python</li>
                 <li>Java</li>
             </ul>
             <h4>Webprogramozás</h4>
