--- a/html/hivatkozasok.html
+++ b/html/hivatkozasok.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         />
         <link rel="stylesheet" href="../stilus/stilus.css" />
-        <title>HTML linkek</title>
+        <title>HTML hivatkozások</title>
     </head>
     <body>
         <a href="#tarto" target="_self">
@@ -22,7 +22,7 @@
         </a>
         <div id="tarto">
             <h1>
-                <a href="./index.html" target="_self">HTML - Linkek</a>
+                <a href="./index.html" target="_self">HTML - Hivatkozások</a>
             </h1>
             <ol>
                 <h4>Hivatkozások - linkek:</h4>
