--- a/python/bevezetes.html
+++ b/python/bevezetes.html
@@ -53,6 +53,16 @@
                     A Python kezelhető procedurális módon, objektumorientált
                     módon és funkcionális módon.
                 </li>
+                <li>
+                    Mivel sokat fogjuk használni, ezért megemlítjük a
+                    <span class="kiemel">print()</span> függvényt, amellyel a
+                    konzolra tudunk írni.
+                    <p>
+                        <span class="kod"
+                            >print("A konzolra írunk valamit!")</span
+                        >
+                    </p>
+                </li>
                 <h4>Python telepítése Windows-ra:</h4>
                 <li>Töltsük le a fenti címről a Pyton interpretert.</li>
                 <img src="./images/kep_01.png" />
