--- a/python/index.html
+++ b/python/index.html
@@ -31,7 +31,28 @@
             <h1><a href="../nyitolap/index.html">Python</a></h1>
             <ul>
                 <li><a href="./bevezetes.html">Bevezetés</a></li>
+                <li>
+                    <a href="./print_es_input.html"
+                        >A print() és input() függvények</a
+                    >
+                </li>
                 <li><a href="./szintaxis.html">Szintaxis</a></li>
+                <li>
+                    <a href="./valtozok_es_adattipusok_es_kasztolas.html"
+                        >Változók, adattípusok és kasztolás</a
+                    >
+                </li>
+                <li>
+                    <a href="./szamok_es_sztringek.html">Számok és sztringek</a>
+                </li>
+                <li>
+                    <a href="./formazott_szovegek.html">Formázott szövegek</a>
+                </li>
+                <li>
+                    <a href="./veletlenszamgeneralas.html"
+                        >Véletlenszámgenerálás</a
+                    >
+                </li>
             </ul>
         </div>
     </body>
