--- a/html/bevezetes.html
+++ b/html/bevezetes.html
@@ -113,7 +113,7 @@
                     tartalom és záró címke! Pillanatnyilag ezek az üres elemek.
                 </li>
                 <img src="./images/kep_04.png" />
-                <h4>Elemek megjelenítési érétke:</h4>
+                <h4>Elemek megjelenítési értéke:</h4>
                 <li>
                     Majdnem minden HTML elemnek van egy megjelenítési értéke.
                     Amit bármikor megtudunk változtatni.
@@ -233,9 +233,9 @@
                     </ul>
                 </li>
                 <li>
-                    A HTML nem követeli meg az attribútumokat idézőjelek közé
-                    tegyük, de nagyon javasolt, mert például az XHTML viszont
-                    igen.
+                    A HTML nem követeli meg, hogy az attribútumokat idézőjelek
+                    közé tegyük, de nagyon javasolt, mert például az XHTML
+                    viszont igen.
                 </li>
                 <li>
                     Néha mind az idézőjel, mind az aposztróf használata
