--- a/nyitolap/index.html
+++ b/nyitolap/index.html
@@ -49,6 +49,9 @@
                 <li>SQL és MySQL</li>
             </ul>
             <h4>IT alapok I</h4>
+            <ul>
+                <li><a href="../pc/nyito.html">PC</a></li>
+            </ul>
         </div>
     </body>
 </html>
