--- a/python/szintaxis.html
+++ b/python/szintaxis.html
@@ -29,14 +29,14 @@
                 <li>Két fontos szabály!</li>
                 <li>
                     <span class="kiemel"
-                        >A Pyton soremelést (enter) használ az utasítások
+                        >A Python soremelést (enter) használ az utasítások
                         (statement) lezárására!</span
                     >
                     Tehát nem pontosvesszőt, mint a legtöbb egyéb nyelv.
                 </li>
                 <li>
                     <span class="kiemel"
-                        >A Pyton behúzást (indentation) használ a hatókörök
+                        >A Python behúzást (indentation) használ a hatókörök
                         (scope) kijelölésére!</span
                     >
                     Behúzásnak a programsorok elején lévő fehér szóközöket
