--- a/pc/bevezetes.html
+++ b/pc/bevezetes.html
@@ -23,15 +23,120 @@
         <div id="tarto">
             <h1><a href="./index.html" target="_self">PC - Bevezetés</a></h1>
             <ol>
-                <h4>A számítógép alapvető felépítése:</h4>
+                <h4>Alapvető dolgok:</h4>
                 <li>
-                    Ismerkedjünk a számítógép (<span class="kiemel"
-                        >PC - Personal Computer</span
-                    >) részeivel.
+                    Mi a
+                    <span class="kiemel"
+                        >számítógép (PC - personal computer)</span
+                    >? Nézzünk néhány választ.
                 </li>
-                <img src="./images/kep_01.jpg" />
-                <li>Íme egy másik kép.</li>
-                <img src="./images/kep_02.jpg" />
+                <li>
+                    <span class="kiemel">Első: Számítógép</span> minden olyan
+                    berendezés, amely képes
+                    <span class="kiemel">bemenő adatok (input)</span>
+                    fogadására, ezeken különféle,
+                    <span class="kiemel"
+                        >előre beprogramozott műveletek (programok)</span
+                    >
+                    végrehajtására, továbbá az
+                    <span class="kiemel"
+                        >eredményül kapott adatok kijelzésére, kivitelére
+                        (output)</span
+                    >, amelyek vagy közvetlenül értelmezhetőek a felhasználók
+                    részére, vagy más berendezések vezérlésére használhatóak.
+                </li>
+                <li>
+                    Fontos kritérium az, hogy ugyanazon bemenő adatok alapján
+                    mindig ugyanazon kimenő adatokat állítsa elő, azaz, hogy a
+                    gép determinisztikusan működjön.
+                </li>
+                <img src="./images/computer.png" />
+                <li>
+                    <span class="kiemel">Második: A számítógép</span> olyan gép
+                    vagy eszköz, amely egy
+                    <span class="kiemel"
+                        >szoftver- vagy hardverprogram utasításai</span
+                    >
+                    alapján folyamatokat, számításokat és műveleteket hajt
+                    végre. Képes adatok (input) fogadására, feldolgozására, majd
+                    kimenetek előállítására.
+                </li>
+                <img src="./images/kep_03.jpg" />
+                <li>
+                    <span class="kiemel">Harmadik: A számítógép</span> olyan gép
+                    , amely programozható
+                    <span class="kiemel"
+                        >aritmetikai vagy logikai műveletsorok</span
+                    >
+                    automatikus végrehajtására ( számítás ) . A modern digitális
+                    elektronikus számítógépek általános, programokként ismert
+                    műveletsorokat hajthatnak végre .
+                </li>
+                <img src="./images/kep_04.jpg" />
+                <li>
+                    <span class="kiemel">Negyedik: A számítógép</span> olyan
+                    eszköz, amely információkat fogad el ( digitalizált adatok
+                    formájában ), és valamilyen eredmény érdekében manipulálja
+                    azokat egy program , szoftver vagy az adatok feldolgozására
+                    vonatkozó utasítások sorozata alapján.
+                </li>
+                <img src="./images/kep_05.jpg" />
+                <h4>A számítógép két fő komponense:</h4>
+                <li>
+                    <span class="kiemel">Hardver (hardware)</span>: a számítógép
+                    bármely olyan része, amelynek
+                    <span class="kiemel">fizikai szerkezete</span> van, azaz
+                    amely kézzel megfogható, például a billentyűzet vagy az
+                    egér. Tartalmazza a számítógép összes belső alkatrészét is.
+                </li>
+                <img src="./images/kep_06.jpg" />
+                <li>
+                    <span class="kiemel">Szoftver (software)</span>: bármilyen
+                    utasításkészlet , amely megmondja a hardvernek,
+                    <span class="kiemel">hogy mit és hogyan kell csinálni</span
+                    >. Szoftverek például a webböngészők, játékok és
+                    szövegszerkesztők.
+                </li>
+                <img src="./images/kep_07.jpg" />
+                <li>
+                    <span class="kiemel">Firmware</span>:
+                    <ul>
+                        <li>
+                            Rögzített, többnyire kis méretű programok és/vagy
+                            adatstruktúrák, melyek a különböző elektronikai
+                            eszközök vezérlését végzik el.
+                        </li>
+                        <li>
+                            A <span class="kiemel">firmware</span> kifejezést
+                            eredetileg a hardverkomponens cseréje nélkül
+                            megváltoztatható, magasabb szintű szoftverrel
+                            szembeállítva definiálták. A firmware feladata
+                            jellemzően az olyan, igen alacsony szintű műveletek
+                            elvégzése, melyek nélkül az eszköz teljesen
+                            működésképtelen lenne.
+                        </li>
+                        <li>
+                            Firmware-t tartalmazó végfelhasználói eszközök
+                            például a távirányító, a számológép,
+                            számítógép-alkatrészek mint a merevlemez,
+                            billentyűzet, a monitor, a memóriakártya.
+                        </li>
+                        <li>
+                            Tudományos műszerek, ipari robotok is tartalmaznak
+                            firmware-t, ahogy a bonyolultabb fogyasztási cikkek
+                            is, mint a mobiltelefonok, digitális
+                            fényképezőgépek, szintetizátorok stb. alap- és
+                            komplikáltabb funkcióit is a firmware működteti.
+                        </li>
+                        <li>
+                            <a
+                                class="link"
+                                href="https://hu.wikipedia.org/wiki/Firmware"
+                                >További információk</a
+                            >
+                        </li>
+                    </ul>
+                </li>
                 <h4>Források:</h4>
                 <p>
                     <a
