--- a/pc/index.html
+++ b/pc/index.html
@@ -31,6 +31,7 @@
             <h1><a href="../nyitolap/index.html">PC</a></h1>
             <ul>
                 <li><a href="./bevezetes.html">Bevezetés</a></li>
+                <li><a href="./pc_reszei.html">PC részei</a></li>
             </ul>
         </div>
     </body>
