--- a/html/head_elem.html
+++ b/html/head_elem.html
@@ -79,9 +79,9 @@
                     </ul>
                 </li>
                 <li>
-                    <span class="kiemel">favicon</span>: az oldal fülén a cím
-                    (<span class="kiemel">title</span>) mellett balra található
-                    kis kép.
+                    <span class="kiemel">favicon (favorite icon)</span>: az
+                    oldal fülén a cím (<span class="kiemel">title</span>)
+                    mellett balra található kis kép.
                 </li>
                 <img src="./images/kep_59.png" />
                 <li>Böngészőkbeli képformátum támogatás.</li>
