--- a/html/tasks/kerdesek.html
+++ b/html/tasks/kerdesek.html
@@ -49,8 +49,9 @@
                     <img src="./kep_01.jpg" alt="kép" />
                     <ol>
                         <li>HyperType Markup Language</li>
-                        <li>HyperText Markup Language</li>
                         <li>HyperText Markup Literature</li>
+                        <li>HyperText Markup Language</li>
+                        <li>HyperText Mark Language</li>
                     </ol>
                     <div class="megoldas">HyperText Markup Language</div>
                     <button onclick="megmutat(1)" class="mutat">
@@ -88,22 +89,30 @@
                     Mit jelent az, hogy jelölőnyelv?
                     <img src="./kep_01.jpg" alt="kép" />
                     <ol>
-                        <li>Semmit, csak jól hangzik.</li>
                         <li>
-                            Sima szöveg más erőforrásokra mutató
-                            hivatkozásokkal.
+                            A tartalom részeit elemekbe (<span class="kiemel"
+                                >element</span
+                            >), címkék (<span class="kiemel">tag</span>) közé
+                            csomagolja.
                         </li>
                         <li>
-                            Lehetővé teszi képek közvetlen beszúrását a
-                            szövegbe.
+                            A szöveg részeinek kijelölése után fel tudom
+                            cserélni őket.
                         </li>
                         <li>
-                            Csak Word dokumentumok szerkesztésére használható
-                            szöveg.
+                            Kijelöli azokat a szimbólumokat, amelyeket
+                            használhatunk.
+                        </li>
+                        <li>
+                            Kijelöli a szövegnek azt a részeit, amelyeket
+                            egyedül szerkeszthetünk.
                         </li>
                     </ol>
                     <div class="megoldas">
-                        Sima szöveg más erőforrásokra mutató hivatkozásokkal.
+                        A tartalom részeit elemekbe (<span class="kiemel"
+                            >element</span
+                        >), címkék (<span class="kiemel">tag</span>) közé
+                        csomagolja.
                     </div>
                     <button onclick="megmutat(3)" class="mutat">
                         Megoldás
@@ -124,6 +133,94 @@
                         Megoldás
                     </button>
                     <button onclick="elrejt(4)" class="rejt">Elrejt</button>
+                </li>
+                <li>
+                    Melyik nem kötelezően megadandó elem?
+                    <img src="./kep_01.jpg" alt="kép" />
+                    <ol>
+                        <li>&lt;html&gt;&lt;/html&gt;</li>
+                        <li>&lt;head&gt;&lt;/head&gt;</li>
+                        <li>&lt;title&gt;&lt;/title&gt;</li>
+                        <li>&lt;style&gt;&lt;/style&gt;</li>
+                        <li>&lt;body&gt;&lt;/body&gt;</li>
+                    </ol>
+                    <div class="megoldas">&lt;style&gt;&lt;/style&gt;</div>
+                    <button onclick="megmutat(5)" class="mutat">
+                        Megoldás
+                    </button>
+                    <button onclick="elrejt(5)" class="rejt">Elrejt</button>
+                </li>
+                <li>
+                    Minden elemnek van nyitó- és zárócímkéje.
+                    <img src="./kep_01.jpg" alt="kép" />
+                    <ol>
+                        <li>Igaz</li>
+                        <li>Hamis</li>
+                    </ol>
+                    <div class="megoldas">Hamis</div>
+                    <button onclick="megmutat(6)" class="mutat">
+                        Megoldás
+                    </button>
+                    <button onclick="elrejt(6)" class="rejt">Elrejt</button>
+                </li>
+                <li>
+                    Mi igaz az üres elemre?
+                    <img src="./kep_01.jpg" alt="kép" />
+                    <ol>
+                        <li>Van nyitócímkéje.</li>
+                        <li>Van zárócímkéje.</li>
+                        <li>Van tartalma.</li>
+                    </ol>
+                    <div class="megoldas">Van nyitócímkéje.</div>
+                    <button onclick="megmutat(7)" class="mutat">
+                        Megoldás
+                    </button>
+                    <button onclick="elrejt(7)" class="rejt">Elrejt</button>
+                </li>
+                <li>
+                    Mi nem igaz egy blokkszintű elemre?
+                    <img src="./kep_01.jpg" alt="kép" />
+                    <ol>
+                        <li>Mindig új sort kezd.</li>
+                        <li>
+                            Csak annyi helyet foglal el, amennyi szükséges,
+                            többet nem.
+                        </li>
+                        <li>
+                            A böngésző automatikusan tesz egy kis margót az elem
+                            elé és mögé.
+                        </li>
+                        <li>Általában van tartalma.</li>
+                    </ol>
+                    <div class="megoldas">
+                        Csak annyi helyet foglal el, amennyi szükséges, többet
+                        nem.
+                    </div>
+                    <button onclick="megmutat(8)" class="mutat">
+                        Megoldás
+                    </button>
+                    <button onclick="elrejt(8)" class="rejt">Elrejt</button>
+                </li>
+                <li>
+                    Mi nem igaz egy beágyazott elemre?
+                    <img src="./kep_01.jpg" alt="kép" />
+                    <ol>
+                        <li>Mindig új sort kezd.</li>
+                        <li>
+                            Csak annyi helyet foglal el, amennyi szükséges,
+                            többet nem.
+                        </li>
+                        <li>
+                            Egy beágyazott elem nem tartalmazhat egy blokkszintű
+                            elemet!
+                        </li>
+                        <li>Általában van tartalma.</li>
+                    </ol>
+                    <div class="megoldas">Mindig új sort kezd.</div>
+                    <button onclick="megmutat(9)" class="mutat">
+                        Megoldás
+                    </button>
+                    <button onclick="elrejt(9)" class="rejt">Elrejt</button>
                 </li>
             </ol>
         </div>
